--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "@livelybone/vue-datepicker": "^3.1.0",
     "bulma": "^0.8.0",
     "bulma-calendar": "^6.0.7",
-    "firebase": "^3.8.0",
+    "firebase": "^7.6.2",
+    "firebaseui": "^4.4.0",
     "luxon": "^1.21.3",
-    "vue": "^2.2.1",
+    "vue": "^2.6.11",
     "vue-browser-geolocation": "^1.8.0",
     "vue-datetime": "^1.0.0-beta.11",
     "vue-notification": "^1.3.20",
-    "vue-router": "^2.4.0",
+    "vue-router": "^2.8.1",
     "vue-social-sharing": "^2.4.7",
-    "vuex": "^2.3.1",
+    "vuex": "^2.5.0",
     "weekstart": "^1.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.0.0",
     "babel-preset-latest": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "vue-loader": "^11.1.4",
-    "vue-template-compiler": "^2.2.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.11.5"
   }
 }
