--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "vue": "^2.6.11",
     "vue-browser-geolocation": "^1.8.0",
     "vue-datetime": "^1.0.0-beta.11",
+    "vue-meta": "^2.3.2",
     "vue-notification": "^1.3.20",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^2.8.1",
     "vue-social-sharing": "^2.4.7",
+    "vue2-editor": "^2.10.2",
     "vuex": "^2.5.0",
     "weekstart": "^1.0.1"
   },
