--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebaseui": "^4.4.0",
     "luxon": "^1.21.3",
     "vue": "^2.6.11",
+    "vue-aos": "^1.0.1",
     "vue-browser-geolocation": "^1.8.0",
     "vue-datetime": "^1.0.0-beta.11",
     "vue-meta": "^2.3.2",
