--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-aos": "^1.0.1",
     "vue-browser-geolocation": "^1.8.0",
     "vue-datetime": "^1.0.0-beta.11",
+    "vue-image-upload-resize": "^2.3.0",
     "vue-meta": "^2.3.2",
     "vue-notification": "^1.3.20",
     "vue-owl-carousel": "^2.0.3",
